fix: fixed alignment of add item section

--- a/style.css
+++ b/style.css
@@ -16,7 +16,10 @@
 .header-container .header-link {
   font-family: fantasy, cursive;
 }
-
+.section-add-item {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
 @media (max-width:768px) {
   .header-container { 
     text-align: center;
